Sun Jan 16  9:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Moved objc-load.c to objc-load.m and filnd-exec.c to find-exec.m
	Added logging functions to objc-load.m so that logging can be
	enabled at runtime using --GNU-Debug=NSBundle

Sun Jan  9 15:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSGAttributedString.m: ([-attributesAtIndex:effectiveRange:])
	fixed illegal parameter - reported by jagapen@whitewater.chem.wisc.edu

Wed Jan  5 16:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSData.m: when serializing selectors, cope with untyped
	selectors instead of crashing.

Wed Jan  5 14:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTimeZone.m: Changed order of lookup to determine the local
	timezone:
	1. User defaults with key 'Local Time Zone'
	2. GNUSTEP_TZ environment variable
	3. $GNUSTEP_SYSTEM_ROOT/Libraries/Resources/NSTimeZones/localtime
	4. TZ environment variable
	5. Use UTC
	This means that the TZ environment variable can now safely be used for
	non-GNUstep timezones as long as GNUSTEP_TZ is defined (or a localtime)
	file exists.

Wed Jan  5 10:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSTimeZones/NSTimeZones.tar: Made a revised set of timezones with
	timezone names offset from GMT corresponding to common usage
	(as in OPENSTEP) rather than strict Posix interpretation.
	Also added detailed instructions to the README file and added a
	small makefile to build the abbreviations/regions tools.

Tue Jan  4 22:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCalendarDate.m: ([-yearOfCommonEra]) fix rounding error.

Tue Dec 21 13:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fixes suggested by karl@nfox.com
	* Source/propList.h: Bugfix parsing larger lists.
	* Source/NSProcessInfo.m: Avoid use of freopen()
	* Source/GSeq.h: for ranges not found, return NSNotFound as the